<resources>
    <string name="app_name">FauDuckHunt</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="hunt">HUNT!</string>
    <string name="start">Start</string>
    <string name="page1Title">Please Fill The Following :</string>

    <string name="restart">Restart</string>
    <string name="submit">Submit</string>

    <string name="gender1">Male</string>
    <string name="gender2">Female</string>
    <string name="age">Age:</string>
    <string name="password">Password</string>
    <string name="zero">0</string>
    <string name="easy">Hard mode</string>
    <string name="misses">Level</string>
    <string name="hit_score">Hits</string>
    <string name="leveltext">Level</string>

    <string name="endgame">Submit</string>
    <string name="resetgame">Restart</string>
    <string name="diff">diff</string>
    <string name="titleP4">Score Details</string>

</resources>
